--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "highcharts": "^10.1.0",
@@ -19,6 +20,7 @@
     "@types/node": "17.0.39",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "cypress": "^10.0.2",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "gh-pages": "^4.0.0",
